[package]
name = "raylang"
version = "0.1.0"
authors = ["Michael Caley <mcaley@darkarctic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
logos = "0.11.4"
regex = "1"
lalrpop-util = "0.19.0"
